<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bentest.LoadDetails" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="@string/loan_details"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-light" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


        <EditText
            android:enabled="false"
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginTop="15sp"
            android:textColor="@color/fadedblack"
            android:hint="@string/loan_id"
            android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/textView15"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:inputType="textEmailAddress"
            android:textColor="@color/fadedblack"
            android:background="@android:color/transparent"
            android:hint="@string/member"
            android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/textView16"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:hint="@string/loan_amount"
            android:textSize="30sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_purple"
            android:layout_marginTop="20sp"
            android:enabled="false"
            android:background="@android:color/transparent"
            android:hint="@string/outstanding_amount"
            android:textColorHint="@android:color/holo_purple"
            android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9C27B0"
            android:text="@string/repayment"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-light" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/Amount_repaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"

            android:hint="@string/amount_repaid"
            android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/next_repayemnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="date of next meeting"
            android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/amountdue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_outstanding"
            android:textSize="24sp"
            android:textColor="#9C27B0"
android:visibility="gone"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitloanpayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/buttoncolour"
            android:textColor="@android:color/white"
            android:text="@string/submit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">


    </LinearLayout>
</LinearLayout>
